Fix nav item spacing and add border between nav links and logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,12 +568,27 @@ footer {
     }
 
     #nav-menu {
+        /* Change padding to be equal on top and bottom */
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+        border-left: 2px solid #3a4a3f;
         /* Display horizontally */
         display: flex;
-        justify-content: center;
+        align-items: center;
     }
 
     #nav-menu > li {
         padding: 0 1rem;
+        border-right: 1px solid #3a4a3f;
+    }
+
+    .nav-toggle-label {
+        display: none;
+    }
+
+    /* Main content */
+    main {
+        /* Push down further to accomodate larger header*/
+        margin-top: 76px;
     }
 }
